--- a/ranked4-frontend/src/app/game-history/game-history.component.scss
+++ b/ranked4-frontend/src/app/game-history/game-history.component.scss
@@ -31,6 +31,10 @@
     gap: 0.75rem;
   }
 
+  .clickable {
+    cursor: pointer;
+  }
+
   .history-item {
     display: flex;
     align-items: center;
@@ -65,9 +69,11 @@
         font-weight: 700;
         color: var(--winner-color);
       }
+
       &.loser {
         color: var(--loser-color);
       }
+
       &.draw {
         font-weight: 500;
         color: var(--draw-color);
