--- a/ranked4-frontend/src/app/leaderboard/leaderboard.component.scss
+++ b/ranked4-frontend/src/app/leaderboard/leaderboard.component.scss
@@ -21,6 +21,10 @@
     gap: 0.75rem;
   }
 
+  .clickable {
+    cursor: pointer;
+  }
+
   .leaderboard-item {
     display: flex;
     align-items: center;
@@ -64,6 +68,7 @@
       border-radius: 50%;
       flex-shrink: 0;
     }
+
     .avatar-placeholder-small {
       background-color: #6c757d;
       color: white;
@@ -77,15 +82,18 @@
     &.is-you {
       background-color: #e6f2ff;
       border: 1px solid var(--primary-color);
+
       .name,
       .elo,
       .winrate {
         color: var(--primary-color);
         font-weight: 700;
       }
+
       .winrate {
         font-weight: 600;
       }
+
       .avatar-placeholder-small {
         background-color: var(--primary-color);
       }
